--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Vewish Labs</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is the official website for Vewish Labs.</p>
-    <p>My portfolio is coming soon.</p>
+    <header>
+        <nav>
+            <a href="/" class="logo">Vewish Labs</a>
+            <ul>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h1>Hello, World!</h1>
+            <p>This is the official website for Vewish Labs.</p>
+        </section>
+
+        <section id="portfolio">
+            <h2>My Portfolio</h2>
+            <p>Coming soon. Check back later for updates on my projects!</p>
+        </section>
+
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Here you can write a little bit about yourself or Vewish Labs.</p>
+        </section>
+    </main>
+
+    <footer id="contact">
+        <p>&copy; 2024 Vewish Labs. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
