--- a/users.html
+++ b/users.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Vewish Labs</title>
+    <title>Users - Vewish Labs</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,28 +29,16 @@
         <div class="main-content">
             <header class="top-nav">
                 <nav>
-                    <a href="#about">About</a>
-                    <a href="#contact">Contact</a>
+                    <a href="/#about">About</a>
+                    <a href="/#contact">Contact</a>
                 </nav>
             </header>
 
             <main>
-                <section class="hero">
-                    <h1>Welcome to Vewish Labs</h1>
-                    <p>Explore our work and innovations.</p>
-                </section>
-
-                <section id="about">
-                    <h2>About Us</h2>
-                    <p>This is where you can write about Vewish Labs. Talk about your mission, vision, and the team.</p>
-                </section>
-
-                <section id="contact">
-                    <h2>Contact</h2>
-                    <div class="love-box">
-                        I love momo
-                        <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
-                    </div>
+                <section id="users">
+                    <h1>👥 Users</h1>
+                    <p>Information about our user community, testimonials, and their stories.</p>
+                    <!-- You can add user profiles or case studies here -->
                 </section>
             </main>
 
